tests/snapshots/snapshot_fixtures__fixtures__timespec_get.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/timespec_get.c" (c, x86_64-unknown-linux-gnu)
global __const.main.value : rec_timespec = zero [cir_private, default, dso_local, constant]
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]

fn timespec_get(%arg0: rec_timespec*, %arg1: s32i) -> s32i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_timespec, "value", align 8
    %2 = alloca s32i, "result", align 4
    %3 = alloca s32i, "nanoseconds_in_range", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @__const.main.value : rec_timespec*
    copy %1, %5
    %6 = const 1 : s32i
    %7 = call @timespec_get(%1, %6) : s32i [all]
    store %7, %2, align 4
    %8 = get_member %1[1] "tv_nsec" : s64i*
    %9 = load %8 : s64i, align 8
    %10 = const 0 : s64i
    %11 = cmp ge %9, %10 : bool
    %12 = ternary %11 ? { : bool
        %26 = get_member %1[1] "tv_nsec" : s64i*
        %27 = load %26 : s64i, align 8
        %28 = const 1000000000 : s64i
        %29 = cmp lt %27, %28 : bool
        yield %29
    } : {
        %25 = const false : bool
        yield %25
    }
    %13 = cast(bool_to_int) %12 : s32i
    store %13, %3, align 4
    %14 = get_global @printf : ((s8i*, ...) -> s32i)*
    %15 = get_global @.str : s8i[7]*
    %16 = cast(array_to_ptrdecay) %15 : s8i*
    %17 = load %2 : s32i, align 4
    %18 = const 1 : s32i
    %19 = cmp eq %17, %18 : bool
    %20 = cast(bool_to_int) %19 : s32i
    %21 = load %3 : s32i, align 4
    %22 = call @printf(%16, %20, %21) : s32i [all]
    %23 = const 0 : s32i
    store %23, %0
    %24 = load %0 : s32i
    return %24
}
