tests/snapshots/snapshot_fixtures__fixtures__type_qualifiers.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/type_qualifiers.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global global_bias : s32i = 3 [internal, default, align 4, dso_local, constant]
global atomic_counter : s32i = 4 [internal, default, align 4, dso_local]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn add_const_param(%arg3: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: s32i):
        %43 = alloca s32i, "value", align 4
        %44 = alloca s32i, "__retval", align 4
        %45 = alloca s32i, "local_bias", align 4
        store %arg3, %43
        %46 = const 5 : s32i
        store %46, %45, align 4
        %47 = load %43 : s32i, align 4
        %48 = load %45 : s32i, align 4
        %49 = add %47, %48 : s32i [nsw]
        %50 = get_global @global_bias : s32i*
        %51 = load %50 : s32i, align 4
        %52 = add %49, %51 : s32i [nsw]
        store %52, %44
        %53 = load %44 : s32i
        return %53
}
fn add_restrict_pointers(%arg1: s32i*, %arg2: s32i*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i*, %arg2: s32i*):
        %34 = alloca s32i*, "lhs", align 8
        %35 = alloca s32i*, "rhs", align 8
        %36 = alloca s32i, "__retval", align 4
        store %arg1, %34
        store %arg2, %35
        %37 = load %34 : s32i*, align 8
        %38 = load %37 : s32i, align 4
        %39 = load %35 : s32i*, align 8
        %40 = load %39 : s32i, align 4
        %41 = add %38, %40 : s32i [nsw]
        store %41, %36
        %42 = load %36 : s32i
        return %42
}
fn add_atomic_value(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %25 = alloca s32i, "value", align 4
        %26 = alloca s32i, "__retval", align 4
        %27 = alloca s32i, "local", align 4
        store %arg0, %25
        %28 = load %25 : s32i, align 4
        %29 = get_global @atomic_counter : s32i*
        %30 = load %29 : s32i, align 4
        %31 = add %28, %30 : s32i [nsw]
        store %31, %27, align 4
        %32 = load %27 : s32i, align 4
        store %32, %26
        %33 = load %26 : s32i
        return %33
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "left", align 4
    %2 = alloca s32i, "right", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 7 : s32i
    store %4, %1, align 4
    %5 = const 11 : s32i
    store %5, %2, align 4
    %6 = get_global @printf : ((s8i*, ...) -> s32i)*
    %7 = get_global @.str : s8i[4]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    %9 = const 2 : s32i
    %10 = call @add_const_param(%9) : s32i [all]
    %11 = call @printf(%8, %10) : s32i [all]
    %12 = get_global @printf : ((s8i*, ...) -> s32i)*
    %13 = get_global @.str : s8i[4]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    %15 = call @add_restrict_pointers(%1, %2) : s32i [all]
    %16 = call @printf(%14, %15) : s32i [all]
    %17 = get_global @printf : ((s8i*, ...) -> s32i)*
    %18 = get_global @.str : s8i[4]*
    %19 = cast(array_to_ptrdecay) %18 : s8i*
    %20 = const 6 : s32i
    %21 = call @add_atomic_value(%20) : s32i [all]
    %22 = call @printf(%19, %21) : s32i [all]
    %23 = const 0 : s32i
    store %23, %0
    %24 = load %0 : s32i
    return %24
}
