tests/snapshots/snapshot_fixtures__fixtures__typedef_ptr_signedness.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/typedef_ptr_signedness.c" (c, x86_64-unknown-linux-gnu)
global __const.main.data : u8i[4] = [65, 66, 67] [cir_private, default, dso_local, constant]
global .str : s8i[8] = "%c%c%c\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u8i[4], "data", align 1
    %2 = alloca rec_buffer, "b", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @__const.main.data : u8i[4]*
    copy %1, %4
    %5 = cast(array_to_ptrdecay) %1 : u8i*
    %6 = get_member %2[0] "start" : u8i**
    store %5, %6, align 8
    %7 = cast(array_to_ptrdecay) %1 : u8i*
    %8 = const 3 : s32i
    %9 = ptr_stride %7, %8 : u8i*
    %10 = get_member %2[1] "end" : u8i**
    store %9, %10, align 8
    %11 = get_global @printf : ((s8i*, ...) -> s32i)*
    %12 = get_global @.str : s8i[8]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = const 0 : s64i
    %15 = get_member %2[0] "start" : u8i**
    %16 = load %15 : u8i*, align 8
    %17 = ptr_stride %16, %14 : u8i*
    %18 = load %17 : u8i, align 1
    %19 = cast(integral) %18 : s32i
    %20 = const 1 : s64i
    %21 = get_member %2[0] "start" : u8i**
    %22 = load %21 : u8i*, align 8
    %23 = ptr_stride %22, %20 : u8i*
    %24 = load %23 : u8i, align 1
    %25 = cast(integral) %24 : s32i
    %26 = const 2 : s64i
    %27 = get_member %2[0] "start" : u8i**
    %28 = load %27 : u8i*, align 8
    %29 = ptr_stride %28, %26 : u8i*
    %30 = load %29 : u8i, align 1
    %31 = cast(integral) %30 : s32i
    %32 = call @printf(%13, %19, %25, %31) : s32i [all]
    %33 = get_global @printf : ((s8i*, ...) -> s32i)*
    %34 = get_global @.str.1 : s8i[4]*
    %35 = cast(array_to_ptrdecay) %34 : s8i*
    %36 = get_member %2[1] "end" : u8i**
    %37 = load %36 : u8i*, align 8
    %38 = get_member %2[0] "start" : u8i**
    %39 = load %38 : u8i*, align 8
    %40 = ptr_diff %37, %39 : s64i
    %41 = cast(integral) %40 : s32i
    %42 = call @printf(%35, %41) : s32i [all]
    %43 = const 0 : s32i
    store %43, %0
    %44 = load %0 : s32i
    return %44
}
