tests/snapshots/snapshot_fixtures__fixtures__typedefs.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/typedefs.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "%lld\n" [cir_private, default, align 1, dso_local, constant]

fn add_alias(%arg0: s32i, %arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %40 = alloca s32i, "a", align 4
        %41 = alloca s32i, "b", align 4
        %42 = alloca s32i, "__retval", align 4
        %43 = alloca s32i, "c", align 4
        store %arg0, %40
        store %arg1, %41
        %44 = load %40 : s32i, align 4
        %45 = load %41 : s32i, align 4
        %46 = add %44, %45 : s32i [nsw]
        store %46, %43, align 4
        %47 = load %43 : s32i, align 4
        store %47, %42
        %48 = load %42 : s32i
        return %48
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "x", align 4
    %2 = alloca u8i, "y", align 1
    %3 = alloca s64i, "z", align 8
    %4 = alloca rec_Box, "bx", align 4
    %5 = const 0 : s32i
    store %5, %0
    %6 = const 40 : s32i
    store %6, %1, align 4
    %7 = const 200 : u8i
    store %7, %2, align 1
    %8 = const 9000000000 : s64i
    store %8, %3, align 8
    %9 = load %1 : s32i, align 4
    %10 = const 2 : s32i
    %11 = call @add_alias(%9, %10) : s32i [all]
    %12 = get_member %4[0] "value" : s32i*
    store %11, %12, align 4
    %13 = load %2 : u8i, align 1
    %14 = get_member %4[1] "tag" : u8i*
    store %13, %14, align 4
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str : s8i[4]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = get_member %4[0] "value" : s32i*
    %19 = load %18 : s32i, align 4
    %20 = call @printf(%17, %19) : s32i [all]
    %21 = get_global @printf : ((s8i*, ...) -> s32i)*
    %22 = get_global @.str : s8i[4]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = get_member %4[1] "tag" : u8i*
    %25 = load %24 : u8i, align 4
    %26 = cast(integral) %25 : s32i
    %27 = call @printf(%23, %26) : s32i [all]
    %28 = get_global @printf : ((s8i*, ...) -> s32i)*
    %29 = get_global @.str.1 : s8i[6]*
    %30 = cast(array_to_ptrdecay) %29 : s8i*
    %31 = load %3 : s64i, align 8
    %32 = call @printf(%30, %31) : s32i [all]
    %33 = get_global @printf : ((s8i*, ...) -> s32i)*
    %34 = get_global @.str : s8i[4]*
    %35 = cast(array_to_ptrdecay) %34 : s8i*
    %36 = const 4 : s32i
    %37 = call @printf(%35, %36) : s32i [all]
    %38 = const 0 : s32i
    store %38, %0
    %39 = load %0 : s32i
    return %39
}
