tests/snapshots/snapshot_fixtures__fixtures__u8_string_literal.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/u8_string_literal.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[20] = "%u %u %u %zu %d %d\n" [cir_private, default, align 1, dso_local, constant]
global main.text : s8i[3] = "Ω" [internal, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "alignment", align 4
    %2 = alloca s32i, "repeated", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @main.text : s8i[3]*
    %5 = const 4 : s32i
    store %5, %1, align 4
    %6 = const 1 : s64i
    %7 = get_element %4[%6] : s8i*
    %8 = load %7 : s8i, align 1
    %9 = cast(integral) %8 : u8i
    %10 = cast(integral) %9 : s32i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : s8i*
    %13 = load %12 : s8i, align 1
    %14 = cast(integral) %13 : u8i
    %15 = cast(integral) %14 : s32i
    %16 = add %10, %15 : s32i [nsw]
    store %16, %2, align 4
    %17 = get_global @printf : ((s8i*, ...) -> s32i)*
    %18 = get_global @.str : s8i[20]*
    %19 = cast(array_to_ptrdecay) %18 : s8i*
    %20 = const 0 : s64i
    %21 = get_element %4[%20] : s8i*
    %22 = load %21 : s8i, align 1
    %23 = cast(integral) %22 : u8i
    %24 = cast(integral) %23 : s32i
    %25 = const 1 : s64i
    %26 = get_element %4[%25] : s8i*
    %27 = load %26 : s8i, align 1
    %28 = cast(integral) %27 : u8i
    %29 = cast(integral) %28 : s32i
    %30 = const 2 : s64i
    %31 = get_element %4[%30] : s8i*
    %32 = load %31 : s8i, align 1
    %33 = cast(integral) %32 : u8i
    %34 = cast(integral) %33 : s32i
    %35 = const 3 : u64i
    %36 = load %1 : s32i, align 4
    %37 = load %2 : s32i, align 4
    %38 = call @printf(%19, %24, %29, %34, %35, %36, %37) : s32i [all]
    %39 = const 0 : s32i
    store %39, %0
    %40 = load %0 : s32i
    return %40
}
